2017-12-21 Werner S Freund
	* Fix for the git tag also accept commits in the git describe str
	* Set development to be auto configured only when first requested
	allowing user to manual set it before if needed.
	* development is now a Configure instance instead of the resulting int
	* Tagging RingerCore-01-00-22

2017-12-20 Werner S Freund
	* Fix on traverse with max_depth_level.
	* Improve rawDict speed by loading keys when they are not in
	ignore list
	* Tagging RingerCore-01-00-21.

2017-12-18 Werner S Freund
	* Improved git version retrieval when .git file is a folder instead of a
	pointer to the submodule path.
	* Tagging RingerCore-01-00-20.

2017-12-18 Werner S Freund
	* Temporarily added excluded sites flag.
	* Argparser now prints help using logger instance.
	* Tagging RingerCore-01-00-19.

2017-12-18 Werner S Freund
	* Added development flag.
  * Tagging RingerCore-01-00-18.

2017-12-17 Werner S Freund
	* Added specific configuration classes that allow setting 
	limited or cast to type configuration instances.
	* Bug fix in Logger module that would display non-breaking lines
	messages when inside of unicode stream environment.
	* Added rucio extract_scope method
	* Added MultiThread automatic retrieval instance
	* Improved Argparser help parsing and added default values.
  * Tagging RingerCore-01-00-17

2017-12-15 Werner S Freund
	* Added option to inspect_list_attrs to not complain if input dimension it
	does not match required dimension size when it is required to be of single
	dimension.
  * Tagging RingerCore-01-00-16

2017-12-02 Werner S Freund
  * Fixed logging parser 
  * Tagging RingerCore-01-00-15

2017-11-19 Werner S Freund
  * Do not work with class converter to avoid keeping old attributes and
	leading in difficult to track errors
  * Tagging RingerCore-01-00-14

2017-11-15 Werner S Freund
  * Added multi-core option
  * Tagging RingerCore-01-00-13

2017-09-20 Werner S Freund
  * Added rounding method and improved texAPI table
